--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "node build/devserver.js",
-    "build": "webpack --config build/example.js"
+    "build": "node build/docs.js && webpack"
   },
   "dependencies": {
     "countup.js": "^1.8.5",
@@ -16,14 +16,18 @@
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-env": "^1.5.1",
+    "chalk": "^1.1.3",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.11.2",
+    "ora": "^1.3.0",
     "prismjs": "^1.6.0",
+    "rimraf": "^2.6.1",
     "style-loader": "^0.18.2",
     "vue-loader": "^12.1.0",
     "vue-template-compiler": "^2.3.3",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.5.0"
+    "webpack-dev-server": "^2.5.0",
+    "webpack-merge": "^4.1.0"
   }
 }
