--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "vue-countup",
-  "description": "countup.js in vue",
-  "version": "1.0.0",
+  "description": "Vue + CountUp.js",
+  "version": "0.1.0",
   "author": "liyl <295697141@qq.com>",
-  "private": true,
   "scripts": {
-    "dev": "node build/devserver.js",
-    "build": "node build/docs.js && webpack"
+    "dev": "cross-env NODE_ENV=development node build/devserver.js",
+    "build": "npm run build:docs && npm run build:libary",
+    "build:docs": "cross-env NODE_ENV=production node build/docs.js",
+    "build:libary": "webpack && cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
     "countup.js": "^1.8.5",
@@ -17,7 +18,7 @@
     "babel-loader": "^6.0.0",
     "babel-preset-env": "^1.5.1",
     "chalk": "^1.1.3",
-    "cross-env": "^3.0.0",
+    "cross-env": "^3.2.4",
     "css-loader": "^0.25.0",
     "file-loader": "^0.11.2",
     "ora": "^1.3.0",
