--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-countup",
+  "name": "vue-countupjs",
   "description": "Vue + CountUp.js",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "liyl <295697141@qq.com>",
   "files": [
     "dist/"
