--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-countupjs",
   "description": "Vue + CountUp.js",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "author": "liyl <295697141@qq.com>",
   "files": [
     "dist/"
@@ -9,9 +9,9 @@
   "main": "./dist/vue-countup.min.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development node build/devserver.js",
-    "build": "npm run build:docs && npm run build:libary",
+    "build": "npm run build:docs && npm run build:library",
     "build:docs": "cross-env NODE_ENV=production node build/docs.js",
-    "build:libary": "webpack && cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build:library": "webpack && cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
     "countup.js": "^1.8.5",
@@ -21,6 +21,7 @@
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-env": "^1.5.1",
+    "babel-preset-es2015": "^6.24.1",
     "chalk": "^1.1.3",
     "cross-env": "^3.2.4",
     "css-loader": "^0.25.0",
