--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-countupjs",
   "description": "Vue + CountUp.js",
-  "version": "0.1.3",
+  "version": "0.1.3-beta.1",
   "author": "liyl <295697141@qq.com>",
   "files": [
     "dist/"
@@ -11,7 +11,7 @@
     "dev": "cross-env NODE_ENV=development node build/devserver.js",
     "build": "npm run build:docs && npm run build:library",
     "build:docs": "cross-env NODE_ENV=production node build/docs.js",
-    "build:library": "webpack && cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build:library": "rimraf dist/ && cross-env NODE_ENV=production webpack --progress --hide-modules && cross-env NODE_ENV=production webpack --progress --hide-modules --config webpack.config.min.js"
   },
   "dependencies": {
     "countup.js": "^1.8.5",
