--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-countupjs",
   "description": "Vue + CountUp.js",
-  "version": "0.1.3-beta.2",
+  "version": "1.0.0",
   "author": "liyl <295697141@qq.com>",
   "files": [
     "dist/"
@@ -20,6 +20,7 @@
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.24.1",
     "chalk": "^1.1.3",
@@ -31,6 +32,8 @@
     "rimraf": "^2.6.1",
     "style-loader": "^0.18.2",
     "vue-loader": "^12.1.0",
+    "vue-markdown-loader": "^2.2.1",
+    "vue-router": "^2.7.0",
     "vue-template-compiler": "^2.3.3",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.5.0",
